fix: address some deprecation warnings in Java 9+ (#1215)